   fastq-to-fasta,filter-abund,filter-stopgaps,interleave-reads,
   load-into-graph,merge-partitions,normalize-by-median,partition-graph,
   readstats,sample-reads-randomly,split-paired-reads}.py: made "--version"
   and the citation header consistent across the scripts.
   * tests/test_scripts.py: added tests for the "--version" and citation
   header behavior.
   * setup.py: turned off the "oxli" script for v2.0.

2015-08-17  Michael R. Crusoe  <crusoe@ucdavis.edu>

   * Makefile: remove BASH shell designation that appears to be incompatible
   with OS X Mavericks & virtualenv; refactored out BASH-isms for those whose
   default shell isn't BASH (Debian, and others).
   * lib/test-read-aligner.cc,read_aligner_test.sh: removed unused test files
   found during search for other shell scripts with BASHisms.

2015-08-18  Michael R. Crusoe  <crusoe@ucdavis.edu>

   * *: reverted load-into-counting.py -> load-into-countgraph.py and
   load-graph.py -> load-into nodegraph.py rename.
   * CITATION: unescaped URL
   * doc/user/guide.rst: added `:program:` and `:option:` directives as
   needed; replaced references to `strip-and-split-for-assembly` with
   `extract-paired-reads`. Updated instructions to use `--unpaired-reads` with
   `normalize-by-median.py` instead of second round of diginorm.

2015-08-18  Titus Brown  <titus@idyll.org>

   * doc/index.rst: update introductory text.
   * doc/user/biblio.rst: update bibliography link descriptions and text.
   * doc/_static/labibi.css: reference new location of base CSS

2015-08-14  Luiz Irber  <khmer@luizirber.org>

   * scripts/unique-kmers.py: Rename option --stream-out to --stream-records.
   * tests/test_streaming_io.py: Fix unique-kmers tests, use new option.
   * khmer/_khmer.cc, lib/hllcounter.cc: Rename some variables for consistency.

2015-08-12  Jacob Fenton  <bocajnotnef@gmail.com>

   * doc/dev/{codebase-guide,coding-guidelines-and-review,development,