@@ -799,6 +799,7 @@ def test_load_graph():
     assert x == (1, 0), x
 
 
+@attr('known_failing')
 def test_oxli_build_graph():
     script = 'oxli'
     args = ['build-graph', '-x', '1e7', '-N', '2', '-k', '20']
@@ -829,6 +830,7 @@ def test_oxli_build_graph():
     assert x == (1, 0), x
 
 
+@attr('known_failing')
 def test_oxli_build_graph_unique_kmers_arg():
     script = 'oxli'
     args = ['build-graph', '-x', '1e7', '-N', '2', '-k', '20', '-U', '3960']
@@ -861,6 +863,7 @@ def test_oxli_build_graph_unique_kmers_arg():
     assert x == (1, 0), x
 
 
+@attr('known_failing')
 def test_oxli_nocommand():
     script = 'oxli'
 
@@ -891,6 +894,7 @@ def test_load_graph_no_tags():
     # loading the ht file...
 
 
+@attr('known_failing')
 def test_oxli_build_graph_no_tags():
     script = 'oxli'
     args = ['build-graph', '-x', '1e7', '-N', '2', '-k', '20', '-n']
@@ -928,6 +932,7 @@ def test_load_graph_fail():
     assert "** ERROR: the graph structure is too small" in err
 
 
+@attr('known_failing')
 def test_oxli_build_graph_fail():
     script = 'oxli'
     args = ['build-graph', '-x', '1e3', '-N', '2', '-k', '20']  # use small HT
@@ -964,6 +969,7 @@ def test_load_graph_write_fp():
     assert 'false positive rate estimated to be 0.002' in data
 
 
+@attr('known_failing')
 def test_oxli_build_graph_write_fp():
     script = 'oxli'
     # use small HT
@@ -998,6 +1004,7 @@ def test_load_graph_multithread():
     (status, out, err) = utils.runscript(script, args)
 
 
+@attr('known_failing')
 def test_oxli_build_graph_multithread():
     script = 'oxli'
 
